crates/linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test_rules__commit_repeated.snap
---
source: linter/src/rules/transaction_nesting.rs
expression: lint_sql(bad_sql)
---
[
    RuleViolation {
        kind: TransactionNesting,
        span: Span {
            start: 25,
            len: Some(
                7,
            ),
        },
        messages: [
            Note(
                "There is no transaction to COMMIT or ROLLBACK.",
            ),
            Help(
                "BEGIN a transaction at an earlier point in the migration or remove this statement.",
            ),
        ],
    },
]
