crates/linter/src/rules/snapshots/squawk_linter__rules__transaction_nesting__test_rules__commit_with_assume_in_transaction.snap
---
source: linter/src/rules/transaction_nesting.rs
expression: lint_sql_assuming_in_transaction(bad_sql)
---
[
    RuleViolation {
        kind: TransactionNesting,
        span: Span {
            start: 10,
            len: Some(
                7,
            ),
        },
        messages: [
            Note(
                "Attempting to end the transaction that is managed by your migration tool.",
            ),
            Help(
                "Put migration statements in separate files to have them be in separate transactions or don't use the assume-in-transaction setting.",
            ),
        ],
    },
]
